[package]
name = "allocandrescu"
version = "0.1.0-alpha.2"
edition = "2021"
rust-version = "1.80"
authors = ["Wiktor Więcław <lonevixu@gmail.com>"]
categories = ["no-std"]
description = "Allocator combinators."
documentation = "https://docs.rs/allocandrescu"
keywords = ["allocator", "combinator", "composable", "Alexandrescu"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/wiktorwieclaw/allocandrescu"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
bumpalo = ["dep:bumpalo"]

[dependencies]
allocator-api2 = { version = "0.2.18", default-features = false }
bumpalo = { version = "3.16.0", optional = true, default-features = false, features = ["allocator-api2"] }

[dev-dependencies]
allocator-api2 = { version = "0.2.18" }
